--- a/LECTURE2.Rmd
+++ b/LECTURE2.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
   - What factors allow competitors to coexist?
   - What factors allow metapopulations to be stable and self-sustaining?
   
-![](White-tailed_deer.jpg)
+![](White-tailed_deer.jpg){width=50%}
 
 ### Conservation and Management
   - What is the conservation status of a focal species or population?
@@ -48,12 +48,13 @@ Population size, or abundance, is often represented as $N$, and is the most basi
 
 ## Exponential growth: the fundamental principle of population ecology
 
-![](puffball1.png)
+![](puffball1.png){width=50%}
 
 Giant puffballs produce 7 trillion offspring (12 zeroes!) in one reproductive event
 ... If all of those individuals reached adulthood, the descendants from just two parent puffballs would weigh more than the entire planet in two generations!
 
 The reason? Populations can exhibit **exponential growth**, in which each new addition to the population expands the reproductive potential of the population in a **positive feedback loop**.    
+
 ## Mathematics and Population Ecology
 
 'Mathematics seems to endow one with a new sense'    
@@ -62,7 +63,7 @@ The reason? Populations can exhibit **exponential growth**, in which each new ad
 'Like most mathematicians, he takes the hopeful biologist to the edge of the pond, points out that a good swim will help his work, and then pushes him in and leaves him to drown'   
   - Charles Elton, in reference to a work by Alfred Lotka   
   
-![](1976_Elton.jpg)
+![](1976_Elton.jpg){width=30%}
 
 The importance of the method is this: if we know certain variables, mostly desired by ecologists and in some cases already determined by them, we can predict certain results which would not normally be predictable or even expected by ecologists. The stage of verification of these mathematical predictions has hardly begun; but their importance cannot be under-estimated, and we look forward to seeing the further volumes of Lotka’s studies.       
   - Charles Elton    
