--- a/index.Rmd
+++ b/index.Rmd
@@ -17,11 +17,11 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Office:** Fleischmann Agriculture, room 220e  
 **Phone:** 775-682-7449     
 **Email**: kevinshoemaker_at_unr_dot_edu        
-**Office hours**: M 4pm in FA 220e         
+**Office hours**: Mondays from 4 to 5pm in FA 220e         
 **Course Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	    
  
 **Teaching Assistant** Sage Ellis (sageellis_at_nevada_dot_unr_dot_edu)        
-**TA Office hours**: TBD       
+**TA Office hours**: Fridays from 11am to noon in FA 301       
 
 ### Course Meeting Times
 
